--- a/src/Pages/CommonPages/Header/Header.css
+++ b/src/Pages/CommonPages/Header/Header.css
@@ -6,7 +6,7 @@ img{
 }
 
 .navbar{
-    background-color: rgb(166, 0, 255);
+    background-color: #893DFF;
     font-family: 'PT Serif', serif;
 }
 
