--- a/src/Pages/Home/Bikes/Bikes.css
+++ b/src/Pages/Home/Bikes/Bikes.css
@@ -17,6 +17,14 @@
 }
 
 .title-line{
-    border: 1px solid #CBCBCB;
+    border: 1px solid #6501fb;
     height: 1px;
+    width: 30px;
+}
+
+
+@media screen and (min-width:280px) and (max-width:991px){
+    .container{
+        grid-template-columns: repeat(1,1fr);
+    }
 }
