--- a/src/Pages/Home/Services/Services.css
+++ b/src/Pages/Home/Services/Services.css
@@ -2,6 +2,19 @@
     color: #CBCBCB;
 }
 
+.service-container{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    align-items: center;
+    grid-gap: 20px;
+}
+
+.title-line{
+    border: 1px solid rgb(166, 0, 255);
+    height: 1px;
+    width: 30px;
+}
+
 .box{
     border: 1px solid #CBCBCB;
     border-bottom: 2px solid #CBCBCB;
@@ -9,10 +22,24 @@
 
 .box:hover{
     box-shadow: 0 10px 15px 0px #CBCBCB;
-    border-bottom: 2px solid rgb(164, 5, 250);
+    border-bottom: 2px solid #a86eff;
 }
 
 .box:hover .icon{
 
-    color: rgb(164, 5, 250);
+    color: #a86eff;
+}
+
+
+@media screen and (min-width:914px) and (max-width:1458px){
+    .service-container{
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+
+
+@media screen and (min-width:280px) and (max-width:913px){
+    .service-container{
+        grid-template-columns: repeat(1,1fr);
+    }
 }
